--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,28 @@
+html {
+	background-color: #f5f5f5;
+}
+
+a {
+	color: #c5c5c5;
+}
+
 .app__container {
 	color: #c5c5c5;
-	background-color: #f5f5f5;
   padding: 0 10%;
+  padding-bottom: 80px;
+}
+
+.app__main {
+	display: flex;
+	flex-direction: row;
+}
+
+.app__main__separator {
+	flex:0.2;
+}
+
+.app__main__route {
+	flex: 4.2;
+	border-top: 2px solid #c5c5c5;
+	padding-top: 25px;
 }
