--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -17,10 +17,11 @@
 	margin: 0;
 	letter-spacing: 2px;
 	font-size: 18px;
-	color: grey;
+	color: white;
 }
 
 .about__description__text {
 	margin-top: 30px;
 	line-height: 25px;
+	color: #E1E2E2;
 }
