--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -31,6 +31,10 @@
 	cursor: pointer;
 }
 
+.header__top__titles__lang.active {
+	color: #FB8122;
+}
+
 .header__top__titles__lang:hover {
 	color: white;
 	border-bottom: 1px solid white;
