--- a/src/components/Portfolio/index.css
+++ b/src/components/Portfolio/index.css
@@ -8,8 +8,16 @@
 	color: #E1E2E2;
 }
 
+.portfolio__title {
+	font-size: 16px;
+	font-weight: bold;
+	color: white;
+	margin-top: 30px;
+	margin-bottom: 0;
+}
+
 .portfolio__projects {
-	margin-top: 40px;
+	margin-top: 30px;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -64,4 +72,8 @@
 	font-size: 14px;
 	text-align: left;
 	color: #FB8122;
+}
+
+.portfolio__openSource {
+	
 }
