--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -1,12 +1,14 @@
 .about {
 	display: flex;
 	flex-direction: row;
+	align-items: flex-start;
 }
 
 .about__logo {
 	width: 45%;
 	border: 1px solid grey;
 	border-radius: 10px;
+	float: left;
 }
 
 .about__description {
@@ -15,13 +17,13 @@
 
 .about__description__title {
 	margin: 0;
-	letter-spacing: 2px;
 	font-size: 18px;
+	font-weight: 500;
 	color: white;
 }
 
 .about__description__text {
-	margin-top: 30px;
+	margin-top: 7px;
 	line-height: 25px;
 	color: #E1E2E2;
 }
