--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -27,3 +27,15 @@
 	line-height: 25px;
 	color: #E1E2E2;
 }
+
+@media only screen  and (min-width : 1224px) {
+	.about__description__title {
+		font-size: 20px;
+	}
+
+	.about__description__text {
+		margin-top: 15px;
+		font-size: 18px;
+		line-height: 27px;
+	}
+}
