--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -28,6 +28,28 @@
 	color: #E1E2E2;
 }
 
+@media only screen  and (max-width : 768px) {
+	.about {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.about__logo {
+		width: 90%;
+	}
+
+	.about__description {
+		padding-left: 0;
+	}
+
+	.about__description__title {
+		margin-top: 20px;
+		margin-bottom: 20px;
+		font-size: 20px;
+		text-align: center;
+	}
+}
+
 @media only screen  and (min-width : 1224px) {
 	.about__description__title {
 		font-size: 20px;
