--- a/src/components/Education/index.css
+++ b/src/components/Education/index.css
@@ -49,3 +49,22 @@
 	margin-top: 10px;
 	margin-bottom: 0;
 }
+
+@media only screen  and (max-width : 768px) {
+	.education__item {
+		flex-direction: column;
+	}
+
+	.education__item__logo__wrapper {
+		text-align: center;
+	}
+
+	.education__item__logo {
+		width: 60%;
+	}
+
+	.education__item__text {
+		margin-top: 20px;
+		padding-left: 0;
+	}
+}
