--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -27,6 +27,27 @@
 	color: #FB8122;
 }
 
+@media only screen  and (max-width : 768px) {
+	.navigation {
+		padding-top: 15px;
+		padding-bottom: 15px;
+	}
+
+	.navigation__list {
+		text-align: center;
+	}
+
+	.navigation__list__item {
+		font-size: 14px;
+		display: inline-block;
+		margin: 0 2%;
+	}
+
+	.navigation__list__item a:hover {
+		text-decoration: none;
+	}
+}
+
 @media only screen  and (min-width : 1224px) {
 	.navigation {
 		padding-top: 40px;
