--- a/src/components/Portfolio/index.css
+++ b/src/components/Portfolio/index.css
@@ -78,6 +78,21 @@
 	
 }
 
+@media only screen  and (max-width : 768px) {
+	.portfolio__projects {
+		flex-direction: column;
+	}
+
+	.portfolio__projects__item {
+		width: 100%;
+	}
+
+	.portfolio__projects__item__text__title {
+		margin-top: 0;
+		font-size: 16px;
+	}
+}
+
 @media only screen  and (min-width : 1224px) {
 	.portfolio__description {
 		font-size: 18px;
